--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <!--CSS-->
     <link rel="stylesheet" href="assets/css/styles.css" />
 
-    <title>Pet Store</title>
+    <title>Lotsha | Baking</title>
   </head>
   <body>
     <!--Top Scroll-->
@@ -24,7 +24,7 @@
     <!--Site Header-->
     <header class="l-header" id="header">
       <nav class="nav bd-container">
-        <a href="#" class="nav__logo">MyPet</a>
+        <a href="#" class="nav__logo">Lostha 4 Sheezz Tranders</a>
 
         <div class="nav__menu" id="nav-menu">
           <ul class="nav__list">
@@ -58,9 +58,9 @@
       <section class="home" id="home">
         <div class="home__container bd-container bd-grid">
           <div class="home__data">
-            <h1 class="home__title">Pet Store</h1>
+            <h1 class="home__title">Lostha 4 Sheezz</h1>
             <h2 class="home__subtitle">
-              Get your pets exactly <br />
+              Get your carvings exactly <br />
               what they want.
             </h2>
             <a href="#" class="button">View Products</a>
@@ -77,11 +77,10 @@
             <span class="section-subtitle about__initial">About us</span>
             <h2 class="section-title about__initial">
               We offer the world's<br />
-              tasty food for pets
+              tasty cakes for our customers
             </h2>
             <p class="about__description">
-              From providing premium, vet-recommended pet food and stylish
-              accessories, to giving expert advice on grooming and veterinary
+              From providing premium, vet-recommended cakes and cupcakes, to giving expert advice on grooming and veterinary
               care.
             </p>
             <a href="#" class="button">Explore products</a>
@@ -98,10 +97,10 @@
 
         <div class="services__container bd-grid">
           <div class="services__content">
-            <h3 class="services__title">Excellent pet food</h3>
+            <h3 class="services__title">Cupcakes</h3>
             <p class="services__description">
               We offer our clients excellent quality services for many years,
-              with the best and delicious pet food in the country.
+              with the best and delicious cupcakes in the country.
             </p>
           </div>
 
@@ -113,10 +112,10 @@
                 </clipPath>
               </defs>
             </svg>
-            <h3 class="services__title">Fast food</h3>
+            <h3 class="services__title">Cakes</h3>
             <p class="services__description">
               We offer our clients excellent quality services for many years,
-              with the best and delicious pet food in the country.
+              with the best and delicious cakes in the country.
             </p>
           </div>
 
@@ -128,10 +127,10 @@
                 </clipPath>
               </defs>
             </svg>
-            <h3 class="services__title">Delivery</h3>
+            <h3 class="services__title">Scones</h3>
             <p class="services__description">
               We offer our clients excellent quality services for many years,
-              with the best and delicious pet food in the country.
+              with the best and delicious scones in the country.
             </p>
           </div>
         </div>
@@ -145,8 +144,8 @@
         <div class="menu__container bd-grid">
           <div class="menu__content">
             <img src="assets/img/plate1.png" alt="" class="menu__img" />
-            <h3 class="menu__name">Dog Thundershirt</h3>
-            <span class="menu__detail">Green an Yellow</span>
+            <h3 class="menu__name">Cupcakes</h3>
+            <span class="menu__detail">Various flavours of muffins</span>
             <span class="menu__preci">R221.00</span>
             <a href="#" class="button menu__button"
               ><i class="bx bx-cart-alt"></i
@@ -155,9 +154,9 @@
 
           <div class="menu__content">
             <img src="assets/img/plate2.png" alt="" class="menu__img" />
-            <h3 class="menu__name">Sweater for Cats</h3>
-            <span class="menu__detail">Winter clothing</span>
-            <span class="menu__preci">R112.00</span>
+            <h3 class="menu__name">Scones</h3>
+            <span class="menu__detail">20L bucket</span>
+            <span class="menu__preci">R100.00</span>
             <a href="#" class="button menu__button"
               ><i class="bx bx-cart-alt"></i
             ></a>
@@ -165,8 +164,8 @@
 
           <div class="menu__content">
             <img src="assets/img/plate3.png" alt="" class="menu__img" />
-            <h3 class="menu__name">Cat formal</h3>
-            <span class="menu__detail">Shawl fancy dress</span>
+            <h3 class="menu__name">Cake</h3>
+            <span class="menu__detail">Vanilla & Chocolate</span>
             <span class="menu__preci">R199.50</span>
             <a href="#" class="button menu__button"
               ><i class="bx bx-cart-alt"></i
@@ -182,8 +181,8 @@
             <span class="section-subtitle contact__initial">Talk to us</span>
             <h2 class="section-title contact__initial">Contact us</h2>
             <p class="contact__description">
-              If you want to order pet products or food, contact us and we will
-              attend you quickly, with our 24/7 chat service.
+              If you want to order our products or request our service, kindly contact us and we will
+              attend you ASAP, with our 24/7 chat service.
             </p>
           </div>
 
@@ -198,7 +197,7 @@
     <footer class="footer section bd-container">
       <div class="footer__container bd-grid">
         <div class="footer__content">
-          <a href="#" class="footer__logo">Pet Store</a>
+          <a href="#" class="footer__logo">Lotsha 4 Shaz</a>
           <span class="footer__description">Shopping</span>
           <div>
             <a href="#" class="footer__social"
@@ -216,8 +215,8 @@
         <div class="footer__content">
           <h3 class="footer__title">Services</h3>
           <ul>
-            <li><a href="#" class="footer__link">Pet Walking</a></li>
-            <li><a href="#" class="footer__link">Pet Sitting</a></li>
+            <li><a href="#" class="footer__link">Tenders</a></li>
+            <li><a href="#" class="footer__link">Baking</a></li>
             <li><a href="#" class="footer__link">Delivery</a></li>
             <li><a href="#" class="footer__link">Ordering</a></li>
           </ul>
@@ -226,15 +225,15 @@
         <div class="footer__content">
           <h3 class="footer__title">Information</h3>
           <ul>
-            <li><a href="#" class="footer__link">Event</a></li>
+            <li><a href="#" class="footer__link">Services</a></li>
             <li><a href="#" class="footer__link">Contact us</a></li>
             <li><a href="#" class="footer__link">Privacy policy</a></li>
-            <li><a href="#" class="footer__link">Terms of services</a></li>
+            <li><a href="#" class="footer__link">Terms & Conditions</a></li>
           </ul>
         </div>
 
         <div class="footer__content">
-          <h3 class="footer__title">Adress</h3>
+          <h3 class="footer__title">Address</h3>
           <ul>
             <li>95 Main Rd</li>
             <li>Mowbray</li>
@@ -246,7 +245,7 @@
         </div>
       </div>
 
-      <p class="footer__copy">&#169; 2021 Talifhani. All right reserved</p>
+      <p class="footer__copy">&#169; Designed and Developed with <i class="fa fa-heart" aria-hidden="true"></i> by Talifhani Mulaudzi</p>
     </footer>
 
     <!--Scroll Reveal-->
